# ollama_rust

./: .gitignore  Cargo.toml
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embedding.rs
src/: lib.rs
