[package]
name = "ollama_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = ["from"] }
futures = "0.3.30"
ollama-rs = "0.1.7"
simple-fs = { version = "0.1.2", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
